[package]
  name          = "cassander"
  version       = "0.1.2"
  edition       = "2021"
  license       = "MIT"
  readme        = "README.md"
  description   = "A Rustified wrapper around the DataStax C/C++ Driver for Apache Cassandra and DataStax Products"
  repository    = "https://github.com/manenko/cassander"
  documentation = "https://docs.rs/cassander"
  categories    = [ "database" ]
  keywords      = [ "cassandra", "datastax" ]
  authors       = [ "Oleksandr Manenko <koornacht@use.startmail.com>" ]
  links         = "cassandra"

[features]
  bigdecimal    = [ "dep:bigdecimal" ]
  chrono        = [ "dep:chrono"     ]
  num-bigint    = [ "dep:num-bigint" ]
  uuid          = [ "dep:uuid"       ]

[dependencies]
  dashmap       = "5.5"
  futures       = "0.3"
  itertools     = "0.12"
  parking_lot   = "0.12"
  thiserror     = "1.0"
  tracing       = { version = "0.1", features = ["std"], default-features = false }
  # Optional dependencies --------------------------------------------------------
  bigdecimal    = { version = "0.4", optional = true }
  chrono        = { version = "0.4", default-features = false, optional = true }
  num-bigint    = { version = "0.4", optional = true }
  serde         = { version = "1.0", features = ["derive"], optional = true }
  uuid          = { version = "1.7", optional = true }

